--- a/TicTacToe/nbproject/project.properties
+++ b/TicTacToe/nbproject/project.properties
@@ -31,11 +31,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/TicTacToe.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.org.json.jar=D:\\Java\\org.json.jar
 file.reference.postgresql-42.3.2.jar=postgresql-42.3.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-42.3.2.jar}
+    ${file.reference.postgresql-42.3.2.jar}:\
+    ${file.reference.org.json.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
