LogIn , LogOut working

--- a/TicTacToe/nbproject/project.properties
+++ b/TicTacToe/nbproject/project.properties
@@ -32,6 +32,7 @@ dist.jar=${dist.dir}/TicTacToe.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.json-20211205.jar=/home/gehad/Downloads/json-20211205.jar
+file.reference.json-20211205.jar-1=C:\\Users\\YasserOsama\\Desktop\\json-20211205.jar
 file.reference.org.json.jar=D:\\Java\\org.json.jar
 file.reference.postgresql-42.3.2.jar=postgresql-42.3.2.jar
 includes=**
@@ -39,7 +40,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.postgresql-42.3.2.jar}:\
     ${file.reference.org.json.jar}:\
-    ${file.reference.json-20211205.jar}
+    ${file.reference.json-20211205.jar}:\
+    ${file.reference.json-20211205.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
