adding Dialogs (invitation - reject - accept)

--- a/TicTacToe/nbproject/private/private.properties
+++ b/TicTacToe/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\YasserOsama\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Mahmoud Shaaban\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
