Sign In , Sign Up , completely seperated from server

--- a/TicTacToe/nbproject/project.properties
+++ b/TicTacToe/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.json-20211205.jar=/home/gehad/Downloads/json-20211205.jar
 file.reference.json-20211205.jar-1=C:\\Users\\YasserOsama\\Desktop\\json-20211205.jar
+file.reference.json-20211205.jar-2=C:\\Users\\YasserOsama\\Desktop\\json-20211205.jar
 file.reference.org.json.jar=D:\\Java\\org.json.jar
 file.reference.postgresql-42.3.2.jar=postgresql-42.3.2.jar
 includes=**
@@ -41,7 +42,8 @@ javac.classpath=\
     ${file.reference.postgresql-42.3.2.jar}:\
     ${file.reference.org.json.jar}:\
     ${file.reference.json-20211205.jar}:\
-    ${file.reference.json-20211205.jar-1}
+    ${file.reference.json-20211205.jar-1}:\
+    ${file.reference.json-20211205.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
