--- a/TicTacToe/nbproject/private/private.properties
+++ b/TicTacToe/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 file.reference.json-20211205.jar-1=C:\\Users\\Mostafa\\Desktop\\json-20211205.jar
-user.properties.file=C:\\Users\\Mostafa\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\YasserOsama\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
