--- a/TicTacToe/nbproject/project.properties
+++ b/TicTacToe/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=TicTacToe
+application.vendor=Hossam
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,7 +31,9 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/TicTacToe.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.java-json.jar=C:\\Users\\Hossam\\Desktop\\Latest PJ- GUI\\java-json.jar
 file.reference.json-20211205.jar=/home/gehad/Downloads/json-20211205.jar
 file.reference.json-20211205.jar-1=C:\\Users\\YasserOsama\\Desktop\\json-20211205.jar
 file.reference.json-20211205.jar-2=C:\\Users\\YasserOsama\\Desktop\\json-20211205.jar
@@ -43,7 +46,8 @@ javac.classpath=\
     ${file.reference.org.json.jar}:\
     ${file.reference.json-20211205.jar}:\
     ${file.reference.json-20211205.jar-1}:\
-    ${file.reference.json-20211205.jar-2}
+    ${file.reference.json-20211205.jar-2}:\
+    ${file.reference.java-json.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
