--- a/TicTacToe/nbproject/private/private.properties
+++ b/TicTacToe/nbproject/private/private.properties
@@ -1,2 +1,7 @@
+compile.on.save=false
+do.depend=false
+do.jar=true
 file.reference.json-20211205.jar-1=C:\\Users\\Mostafa\\Desktop\\json-20211205.jar
-user.properties.file=C:\\Users\\YasserOsama\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+javac.debug=true
+javadoc.preview=true
+user.properties.file=C:\\Users\\Hossam\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
