--- a/TicTacToe/nbproject/project.properties
+++ b/TicTacToe/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.java-json.jar=C:\\Users\\Hossam\\Desktop\\Latest PJ- GUI\\java-json.jar
+file.reference.java-json.jar-1=C:\\Users\\Hossam\\Desktop\\Java PJ\\Latest PJ- GUI\\java-json.jar
 file.reference.json-20211205.jar=/home/gehad/Downloads/json-20211205.jar
 file.reference.json-20211205.jar-1=C:\\Users\\YasserOsama\\Desktop\\json-20211205.jar
 file.reference.json-20211205.jar-2=C:\\Users\\YasserOsama\\Desktop\\json-20211205.jar
@@ -47,7 +48,8 @@ javac.classpath=\
     ${file.reference.json-20211205.jar}:\
     ${file.reference.json-20211205.jar-1}:\
     ${file.reference.json-20211205.jar-2}:\
-    ${file.reference.java-json.jar}
+    ${file.reference.java-json.jar}:\
+    ${file.reference.java-json.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
